[gd_scene load_steps=7 format=3 uid="uid://bfpwf6thusdxn"]

[ext_resource type="Script" path="res://main.gd" id="1_lwiex"]
[ext_resource type="PackedScene" uid="uid://iubtg1kocsea" path="res://Character/base_character.tscn" id="2_rrpgx"]
[ext_resource type="PackedScene" uid="uid://cmgmdkaqhrmqm" path="res://Character/npc_character.tscn" id="3_8yl7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyjce"]
size = Vector2(24, 710)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrg8w"]
size = Vector2(845, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_satkp"]
radius = 96.13

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwiex")

[node name="Background" type="Polygon2D" parent="."]
color = Color(0.357512, 0.655274, 0.531672, 1)
polygon = PackedVector2Array(-23, -19, -23, 694, 819, 694, 816, -23)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-13, 337)
shape = SubResource("RectangleShape2D_eyjce")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(811, 335)
shape = SubResource("RectangleShape2D_eyjce")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(402, -10)
shape = SubResource("RectangleShape2D_yrg8w")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(397, 695)
shape = SubResource("RectangleShape2D_yrg8w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 286.0
offset_top = 410.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "you need to understand pricing.https://ai.google.dev/pricing"

[node name="KeyContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/KeyContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "Read https://ai.google.dev/pricing first
This sample need api key from settings.json . (this file added .gitignore)
make by yourself({\"api_key\":KEY} or  set and click set api button.
how to get key see https://ai.google.dev/tutorials/setup"
editable = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/KeyContainer"]
layout_mode = 2
alignment = 1

[node name="KeyEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/KeyContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="SetAPIButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/KeyContainer/HBoxContainer"]
layout_mode = 2
text = "Set API Key"

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="EnterChatButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/ButtonContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 4
text = "Chat"

[node name="baseCharacter" parent="." instance=ExtResource("2_rrpgx")]
position = Vector2(48, 628)

[node name="npc_character" parent="." instance=ExtResource("3_8yl7i")]
position = Vector2(615, 112)

[node name="ChatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatArea"]
position = Vector2(615, 112)
shape = SubResource("CircleShape2D_satkp")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/KeyContainer/HBoxContainer/SetAPIButton" to="." method="_on_set_api_button_pressed"]
[connection signal="area_entered" from="ChatArea" to="." method="_on_chat_area_area_entered"]
[connection signal="body_entered" from="ChatArea" to="." method="_on_chat_area_body_entered"]
[connection signal="body_exited" from="ChatArea" to="." method="_on_chat_area_body_exited"]
